2007-02-06 Sandro Santilli <strk@refractions.net>

        * operation::buffer::BufferBuilder,
	  operation::buffer::BufferOp:
	  Fixed buffer operation to always return polygonal
	  geometry

---------  GEOS-3.0.0rc4 release [2007-02-02] --------------------------

2007-02-01 Sandro Santilli <strk@refractions.net>

	* operation::buffer::BufferOp: set MAX_PRECISION_DIGITS
	  so to match JTS.

2007-01-26 Sandro Santilli <strk@refractions.net>

	* tests/xmltester/: Makefile.am, stmlf-cases-20070119.xml:
	  New overlay test.
	* tests/xmltester/XMLTester.cpp: improved buffer
	  result validator.
	* source/operation/buffer/BufferBuilder.cpp (computeNodedEdges):
	  remove repeated points from noded SegmentStrings, skip collapsed
	  edges.

2007-01-17 Sandro Santilli <strk@refractions.net>

	* tests/xmltester/: heisenbugs.xml, Makefile.am:
	  New testcase for bug fixed by previous commit.

2007-01-16 Sandro Santilli <strk@refractions.net>

	* source/index/strtree/STRtree.cpp (yComparator): 
	  Use static_cast<> and make code more readable.
	  A side effect seems to be fixing a segfault :!
	* source/headers/geos/index/strtree/STRtree.h (centreY):
	  const-corrected.
	* tests/xmltester/XMLTester.cpp: don't include catch-all headers.

2007-01-09 Sandro Santilli <strk@refractions.net>

	* source/operation/buffer/: Makefile.am, OffsetCurveVertexList.h:
	  New helper class for OffsetCurveBuilder
	* operation::buffer::OffsetCurveBuilder:
	  Move vertexlist management to external class.
	* tests/xmltester/: Makefile.am, TestBufferExternal.xml:
	  added test for above changes (imported from JTS and
	  modified to work with GEOS).
	* tests/xmltester/XMLTester.cpp: change buffer
	  validator again: check area of topological 
	  difference between expected and obtained result
	  to be smaller then 1/1000 of expected geometry
	  area.

2007-01-09 Sandro Santilli <strk@refractions.net>

	* source/geom/CoordinateArraySequence.cpp,
	  source/headers/geos/geom/CoordinateSequence.h,